@@ -127,15 +127,11 @@ chroot_block_device::setup_lock (setup_type type,
 
   if (stat(this->device.c_str(), &statbuf) == -1)
     {
-      format fmt(_("%1% chroot: failed to stat device %2%: %3%"));
-      fmt % get_name() % get_device() % strerror(errno);
-      throw error(fmt);
+      throw error(get_device(), DEVICE_STAT, errno);
     }
   else if (!S_ISBLK(statbuf.st_mode))
     {
-      format fmt(_("%1% chroot: %2% is not a block device"));
-      fmt % get_name() % get_device();
-      throw error(fmt);
+      throw error(get_device(), DEVICE_NOTBLOCK);
     }
   else
     {
@@ -148,9 +144,7 @@ chroot_block_device::setup_lock (setup_type type,
 	    }
 	  catch (sbuild::lock::error const& e)
 	    {
-	      format fmt(_("%1%: failed to lock device: %2%"));
-	      fmt % get_device() % e.what();
-	      throw error(fmt);
+	      throw error(get_device(), DEVICE_LOCK, e.what());
 	    }
 	}
       else
@@ -161,9 +155,7 @@ chroot_block_device::setup_lock (setup_type type,
 	    }
 	  catch (sbuild::lock::error const& e)
 	    {
-	      format fmt(_("%1%: failed to unlock device: %2%"));
-	      fmt % get_device() % e.what();
-	      throw error(fmt);
+	      throw error(get_device(), DEVICE_UNLOCK, e.what());
 	    }
 	}
     }
